--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -2,13 +2,13 @@
 
 // Config vars
 // Kaldi logo brand color: #FD461E
-$kaldi-red: #D64000
+$kaldi-red: #273C72
 $kaldi-red-invert: #fff
 
 $primary: $kaldi-red
 $primary-invert: $kaldi-red-invert
-$body-color: #333
-$black: #2b2523
+$body-color: #273C72
+$black: #273C72
 
 .navbar .navbar-menu
   box-shadow:none !important
@@ -61,9 +61,9 @@ $black: #2b2523
     border-radius: .25rem
     text-decoration: none
     font-weight: 700
-    color: #CC3700
+    color: #273C72
     text-align: center
-    -webkit-box-shadow: inset 0 0 0 2px #CC3700
+    -webkit-box-shadow: inset 0 0 0 2px #273C72
     box-shadow: inset 0 0 0 2px #f40
     -webkit-transition: all .15s ease
     transition: all .15s ease
@@ -97,6 +97,7 @@ $menu-label-color: $white-ter
 .menu-label
   font-size: 1em !important
   text-align: left
+  color: #FFF7E7
 .menu-list
   list-style: none !important
   text-align: left
