add realtime data

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -10,6 +10,14 @@ $primary-invert: $kaldi-red-invert
 $body-color: #273C72
 $black: #273C72
 
+body
+  // background-color: #040406
+  // color: #6cbdce
+
+.columns
+  // background-color: #111b27
+  // border: 2px solid #d1f2e1
+
 .navbar .navbar-menu
   box-shadow:none !important
 
@@ -115,7 +123,7 @@ $menu-label-color: $white-ter
 
 // blog roll
 .blog-list-item.is-featured
-  background-color: #d6400033;
+  background-color: #98C8D2;
 .blog-list-item header
   display: flex;
   margin-bottom: 1em;
@@ -123,6 +131,7 @@ $menu-label-color: $white-ter
   flex-basis: 35%;
   margin: 0 1.5em 0 0;
 
+$family-sans-serif: "Open Sans", sans-serif;
 
 @import "~bulma"
 
